srcs/phpmyadmin.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
spec:
  ports:
    - port: 80
      nodePort: 5000
  selector:
    app: phpmyadmin
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin
          imagePullPolicy: Never
          ports:
            - containerPort: 80
